courses on process

--- a/courses.html
+++ b/courses.html
@@ -178,7 +178,7 @@
                 <div class="text">
                   <span class="probootstrap-meta"><i class="icon-calendar2"></i> July 10, 2017</span>
                   <h3>Data Structure</h3>
-                  <p>In computer science, a data structure is a particular way of storing and organizing data in a computer so that it can be used efficiently.[1][2]Different kinds of data structures are suited to different kinds of applications, and some are highly specialized to specific tasks. For example, B-trees are particularly well-suited for implementation of databases, while compilerimplementations usually use hash tables to look up identifiers.Data structures provide a means to manage huge amounts of data efficiently, such as large databases and internet indexing services. Usually, efficient data structures are a key to designing efficient algorithms. Some formal design methods and programming languages emphasize data structures, rather than algorithms, as the key organizing factor in software design.</p>
+                  <p>In computer science, a data structure is a particular way of storing and organizing data in a computer so that it can be used efficiently.Different kinds of data structures are suited...</p>
                   <p><a href="#" class="btn btn-primary">Enroll now</a> <span class="enrolled-count">7,202 students enrolled</span></p>
                 </div>
               </div>
@@ -209,7 +209,7 @@
                 <div class="text">
                   <span class="probootstrap-meta"><i class="icon-calendar2"></i> July 10, 2017</span>
                   <h3>CS 107: Physics - 1 (Mechanics)</h3>
-                  <p>Introductory physics course, geared towards engineering majors. Equilibrium and motion of particles in one and two dimensions in the framework of Newtonian mechanics, force laws (including gravity), energy, momentum, rotational motion, conservation laws, and fluids. Examples will be drawn from astronomy, biology, sports, and current events. Prerequisites: Mathematics.</p>
+                  <p>Introductory physics course, geared towards engineering majors. Equilibrium and motion of particles in one and two dimensions in the framework of Newtonian mechanics, force laws...</p>
                   <p><a href="#" class="btn btn-primary">Enroll now</a> <span class="enrolled-count">9,582 students enrolled</span></p>
                 </div>
               </div>
@@ -228,9 +228,7 @@
                 <div class="text">
                   <span class="probootstrap-meta"><i class="icon-calendar2"></i> July 10, 2017</span>
                   <h3>CS 108: Physics - 2 (Electricity and Magnetism)</h3>
-                  <p>Physics course geared toward engineering majors. Electricity and Magnetism should provide instruction in each of the following five content areas: electrostatics; conductors, capacitors and dielectrics; electric circuits; Electric & magnetic fields; and electromagnetism, DC and AC circuitry.
-
-.</p>
+                  <p>Physics course geared toward engineering majors. Electricity and Magnetism should provide instruction in each of the following five content areas: electrostatics; conductors...</p>
                   <p><a href="#" class="btn btn-primary">Enroll now</a> <span class="enrolled-count">2,928 students enrolled</span></p>
                 </div>
               </div>
