--- a/calendar/schedule-of-lectures.html
+++ b/calendar/schedule-of-lectures.html
@@ -145,7 +145,7 @@
 	<script type="text/javascript" src="../js/highlight.js"></script>
     <script src="../js/scripts.min.js"></script>
     <script src="../js/main.min.js"></script>
-    <script src="../js/custom.js"></script>
+    <script src="../js/scroll.js"></script>
 	
 	<script type="text/javascript">
 		$(function() {
