--- a/calendar/schedule-of-lectures.html
+++ b/calendar/schedule-of-lectures.html
@@ -5,7 +5,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" type="image/gif/png" href="images/favicon.png">
+    <link rel="icon" type="image/gif/png" href="../images/favicon.png">
     <title>Schedule of Lectures | CS AIU</title>
   
     <link href="https://fonts.googleapis.com/css?family=Raleway:300,400,500,700|Open+Sans" rel="stylesheet">
@@ -82,7 +82,7 @@
                 <ul class="dropdown-menu">
                   <li><a href="http://iaau.edu.kg/view/public/pages/page.xhtml;jsessionid=TCIdhbOa1D1eOGAldtBq-N1i_kOX5KHgKE593l4n.sites?id=281">Academic Calendar</a></li>
                   <li><a href="schedule-of-lectures.html">Schedule of Lectures</a></li>
-                  <li><a href="#">Midterms Schedule</a></li>
+                  <li><a href="midterms.html">Midterms Schedule</a></li>
                   <li><a href="#">Finals Schedule</a></li>
                   <li><a href="#">Labs Schedule</a></li>
                   
