--- a/courses.html
+++ b/courses.html
@@ -113,7 +113,7 @@
                 <ul class="dropdown-menu">
                   <li><a href="http://iaau.edu.kg/view/public/pages/page.xhtml;jsessionid=TCIdhbOa1D1eOGAldtBq-N1i_kOX5KHgKE593l4n.sites?id=281">Academic Calendar</a></li>
                   <li><a href="calendar/schedule-of-lectures.html">Schedule of Lectures</a></li>
-                  <li><a href="#">Midterms Schedule</a></li>
+                  <li><a href="calendar/midterms.html">Midterms Schedule</a></li>
                   <li><a href="#">Finals Schedule</a></li>
                   <li><a href="#">Labs Schedule</a></li>
                   
