--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                   <li><a href="http://iaau.edu.kg/view/public/pages/page.xhtml;jsessionid=TCIdhbOa1D1eOGAldtBq-N1i_kOX5KHgKE593l4n.sites?id=281">Academic Calendar</a></li>
                   <li><a href="calendar/schedule-of-letures.html">Schedule of Lectures</a></li>
                   <li><a href="midterms.html">Midterms Schedule</a></li>
-                  <li><a href="#">Finals Schedule</a></li>
+                  <li><a href="calendar/finals.html">Finals Schedule</a></li>
                   <li><a href="#">Labs Schedule</a></li>
                   
                </ul>
