--- a/calendar/finals.html
+++ b/calendar/finals.html
@@ -5,7 +5,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" type="image/gif/png" href="images/favicon.png">
+    <link rel="icon" type="image/gif/png" href="../images/favicon.png">
     <title>Finals | CS AIU</title>
   
     <link href="https://fonts.googleapis.com/css?family=Raleway:300,400,500,700|Open+Sans" rel="stylesheet">
@@ -114,7 +114,7 @@
 			             <p align="right">Download as pdf file:
 			                <a href="files/cs-finals-schedule.pdf"  target="_blank" >
 			                    Schedule of Final Exams 16-17</a></p>
-			            <iframe width='1068' height='1600' frameborder='0' src='https://docs.google.com/spreadsheets/d/17uojWxnj6dpATBBsdfndOIYhj7id46QTI_tTszR5gb4/pubhtml?gid=157992629&single=true'>
+			            <iframe width='100%' height='1600' frameborder='0' src='https://docs.google.com/spreadsheets/d/17uojWxnj6dpATBBsdfndOIYhj7id46QTI_tTszR5gb4/pubhtml?gid=157992629&single=true'>
 			            </iframe>
 			        </div>
 				</section>
