--- a/calendar/schedule-of-lectures.html
+++ b/calendar/schedule-of-lectures.html
@@ -84,7 +84,7 @@
                   <li><a href="schedule-of-lectures.html">Schedule of Lectures</a></li>
                   <li><a href="midterms.html">Midterms Schedule</a></li>
                   <li><a href="finals.html">Finals Schedule</a></li>
-                  <li><a href="#">Labs Schedule</a></li>
+                  <li><a href="labs.html">Labs Schedule</a></li>
                   
                </ul>
               </li>
