--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                   <li><a href="calendar/schedule-of-letures.html">Schedule of Lectures</a></li>
                   <li><a href="midterms.html">Midterms Schedule</a></li>
                   <li><a href="calendar/finals.html">Finals Schedule</a></li>
-                  <li><a href="#">Labs Schedule</a></li>
+                  <li><a href="labs.html">Labs Schedule</a></li>
                   
                </ul>
               </li>
