--- a/teachers.html
+++ b/teachers.html
@@ -154,7 +154,7 @@
                   <li><a href="calendar/schedule-of-letures.html">Schedule of Lectures</a></li>
                   <li><a href="calendar/midterms.html">Midterms Schedule</a></li>
                   <li><a href="calendar/finals.html">Finals Schedule</a></li>
-                  <li><a href="#">Labs Schedule</a></li>
+                  <li><a href="calendar/labs.html">Labs Schedule</a></li>
                   
                </ul>
               </li>
