--- a/faculty/n.shaidullaev.html
+++ b/faculty/n.shaidullaev.html
@@ -110,7 +110,7 @@
                   
                </ul>
               </li>
-            <li><a href="teachers.html" style="color: #49d192">Faculty</a></li>
+            <li><a href="../teachers.html" style="color: #49d192">Faculty</a></li>
               <li class="dropdown">
                 <a href="#" data-toggle="dropdown" class="dropdown-toggle" style="color: #49d192">Labs</a>
                 <ul class="dropdown-menu">
