--- a/faculty/n.shaidullaev.html
+++ b/faculty/n.shaidullaev.html
@@ -5,7 +5,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" type="image/gif/png" href="images/favicon.png">
+    <link rel="icon" type="image/gif/png" href="../images/favicon.png">
     <title>Nurlan Shaidullaev | CS AIU</title>
     
     
