putted links for teacher

--- a/teachers.html
+++ b/teachers.html
@@ -228,12 +228,13 @@
                 <div class="text">
                   <h3>Sanzhar Erdolatov</h3>
                   <p>Library Administrator</p>
-                  <ul class="probootstrap-footer-social">
+                  <div class="teachers-info"> <a href="#">Learn more</a></div> 
+                 <!-- <ul class="probootstrap-footer-social">
                     <li class="twitter"><a href="#"><i class="icon-twitter"></i></a></li>
                     <li class="facebook"><a href="#"><i class="icon-facebook2"></i></a></li>
                     <li class="instagram"><a href="#"><i class="icon-instagram2"></i></a></li>
                     <li class="google-plus"><a href="#"><i class="icon-google-plus"></i></a></li>
-                  </ul>
+                  </ul>-->
                 </div>
               </div>
             </div>
@@ -245,12 +246,13 @@
                 <div class="text">
                   <h3>Nurlan Shaidullaev</h3>
                   <p>Head Of CS Department</p>
-                  <ul class="probootstrap-footer-social">
+                   <div class="teachers-info"> <a href="#">Learn more</a></div> 
+                 <!-- <ul class="probootstrap-footer-social">
                     <li class="twitter"><a href="#"><i class="icon-twitter"></i></a></li>
                     <li class="facebook"><a href="#"><i class="icon-facebook2"></i></a></li>
                     <li class="instagram"><a href="#"><i class="icon-instagram2"></i></a></li>
                     <li class="google-plus"><a href="#"><i class="icon-google-plus"></i></a></li>
-                  </ul>
+                  </ul>-->
                 </div>
               </div>
             </div>
@@ -263,12 +265,13 @@
                 <div class="text">
                   <h3>Burul Shambetova</h3>
                   <p>Lecturer</p>
-                  <ul class="probootstrap-footer-social">
+                  <div class="teachers-info"> <a href="#">Learn more</a></div> 
+                 <!-- <ul class="probootstrap-footer-social">
                     <li class="twitter"><a href="#"><i class="icon-twitter"></i></a></li>
                     <li class="facebook"><a href="#"><i class="icon-facebook2"></i></a></li>
                     <li class="instagram"><a href="#"><i class="icon-instagram2"></i></a></li>
                     <li class="google-plus"><a href="#"><i class="icon-google-plus"></i></a></li>
-                  </ul>
+                  </ul>-->
                 </div>
               </div>
             </div>
@@ -280,12 +283,13 @@
                 <div class="text">
                   <h3>Aleksei Bondarev</h3>
                   <p>Lecturer</p>
-                  <ul class="probootstrap-footer-social">
+                   <div class="teachers-info"> <a href="#">Learn more</a></div> 
+                 <!-- <ul class="probootstrap-footer-social">
                     <li class="twitter"><a href="#"><i class="icon-twitter"></i></a></li>
                     <li class="facebook"><a href="#"><i class="icon-facebook2"></i></a></li>
                     <li class="instagram"><a href="#"><i class="icon-instagram2"></i></a></li>
                     <li class="google-plus"><a href="#"><i class="icon-google-plus"></i></a></li>
-                  </ul>
+                  </ul>-->
                 </div>
               </div>
             </div>
@@ -300,12 +304,13 @@
                 <div class="text">
                   <h3>Dilshad Anarbaev</h3>
                   <p>Lecturer</p>
-                  <ul class="probootstrap-footer-social">
+                   <div class="teachers-info"> <a href="#">Learn more</a></div> 
+                 <!-- <ul class="probootstrap-footer-social">
                     <li class="twitter"><a href="#"><i class="icon-twitter"></i></a></li>
                     <li class="facebook"><a href="#"><i class="icon-facebook2"></i></a></li>
                     <li class="instagram"><a href="#"><i class="icon-instagram2"></i></a></li>
                     <li class="google-plus"><a href="#"><i class="icon-google-plus"></i></a></li>
-                  </ul>
+                  </ul>-->
                 </div>
               </div>
             </div>
@@ -317,12 +322,13 @@
                 <div class="text">
                   <h3>Marlen Akimaliev</h3>
                   <p>Lecturer</p>
-                  <ul class="probootstrap-footer-social">
+                 <div class="teachers-info"> <a href="#">Learn more</a></div> 
+                 <!-- <ul class="probootstrap-footer-social">
                     <li class="twitter"><a href="#"><i class="icon-twitter"></i></a></li>
                     <li class="facebook"><a href="#"><i class="icon-facebook2"></i></a></li>
                     <li class="instagram"><a href="#"><i class="icon-instagram2"></i></a></li>
                     <li class="google-plus"><a href="#"><i class="icon-google-plus"></i></a></li>
-                  </ul>
+                  </ul>-->
                 </div>
               </div>
             </div>
@@ -335,12 +341,13 @@
                 <div class="text">
                   <h3>Azamat Kibekbaev</h3>
                   <p>Lecturer</p>
-                  <ul class="probootstrap-footer-social">
+                   <div class="teachers-info"> <a href="#">Learn more</a></div> 
+                 <!-- <ul class="probootstrap-footer-social">
                     <li class="twitter"><a href="#"><i class="icon-twitter"></i></a></li>
                     <li class="facebook"><a href="#"><i class="icon-facebook2"></i></a></li>
                     <li class="instagram"><a href="#"><i class="icon-instagram2"></i></a></li>
                     <li class="google-plus"><a href="#"><i class="icon-google-plus"></i></a></li>
-                  </ul>
+                  </ul>-->
                 </div>
               </div>
             </div>
@@ -352,12 +359,13 @@
                 <div class="text">
                   <h3>Musa Abdujabbarov</h3>
                   <p>Lecturer</p>
-                  <ul class="probootstrap-footer-social">
+                  <div class="teachers-info"> <a href="#">Learn more</a></div> 
+                 <!-- <ul class="probootstrap-footer-social">
                     <li class="twitter"><a href="#"><i class="icon-twitter"></i></a></li>
                     <li class="facebook"><a href="#"><i class="icon-facebook2"></i></a></li>
                     <li class="instagram"><a href="#"><i class="icon-instagram2"></i></a></li>
                     <li class="google-plus"><a href="#"><i class="icon-google-plus"></i></a></li>
-                  </ul>
+                  </ul>-->
                 </div>
               </div>
             </div>
@@ -372,12 +380,13 @@
                 <div class="text">
                   <h3>Kanybek Duisheev</h3>
                   <p>Lecturer</p>
-                  <ul class="probootstrap-footer-social">
+                   <div class="teachers-info"> <a href="#">Learn more</a></div> 
+                 <!-- <ul class="probootstrap-footer-social">
                     <li class="twitter"><a href="#"><i class="icon-twitter"></i></a></li>
                     <li class="facebook"><a href="#"><i class="icon-facebook2"></i></a></li>
                     <li class="instagram"><a href="#"><i class="icon-instagram2"></i></a></li>
                     <li class="google-plus"><a href="#"><i class="icon-google-plus"></i></a></li>
-                  </ul>
+                  </ul>-->
                 </div>
               </div>
             </div>
@@ -389,12 +398,13 @@
                 <div class="text">
                   <h3>Ulan Sadybakasov</h3>
                   <p>Lecturer</p>
-                  <ul class="probootstrap-footer-social">
+                  <div class="teachers-info"> <a href="#">Learn more</a></div> 
+                 <!-- <ul class="probootstrap-footer-social">
                     <li class="twitter"><a href="#"><i class="icon-twitter"></i></a></li>
                     <li class="facebook"><a href="#"><i class="icon-facebook2"></i></a></li>
                     <li class="instagram"><a href="#"><i class="icon-instagram2"></i></a></li>
                     <li class="google-plus"><a href="#"><i class="icon-google-plus"></i></a></li>
-                  </ul>
+                  </ul>-->
                 </div>
               </div>
             </div>
@@ -407,12 +417,13 @@
                 <div class="text">
                   <h3>Zhyldyzbek Zhakshylykov</h3>
                   <p>Lecturer</p>
-                  <ul class="probootstrap-footer-social">
+                   <div class="teachers-info"> <a href="#">Learn more</a></div> 
+                 <!-- <ul class="probootstrap-footer-social">
                     <li class="twitter"><a href="#"><i class="icon-twitter"></i></a></li>
                     <li class="facebook"><a href="#"><i class="icon-facebook2"></i></a></li>
                     <li class="instagram"><a href="#"><i class="icon-instagram2"></i></a></li>
                     <li class="google-plus"><a href="#"><i class="icon-google-plus"></i></a></li>
-                  </ul>
+                  </ul>-->
                 </div>
               </div>
             </div>
@@ -424,12 +435,13 @@
                 <div class="text">
                   <h3>Omer Gurbuz</h3>
                   <p>Lecturer</p>
-                  <ul class="probootstrap-footer-social">
+                   <div class="teachers-info"> <a href="#">Learn more</a></div> 
+                 <!-- <ul class="probootstrap-footer-social">
                     <li class="twitter"><a href="#"><i class="icon-twitter"></i></a></li>
                     <li class="facebook"><a href="#"><i class="icon-facebook2"></i></a></li>
                     <li class="instagram"><a href="#"><i class="icon-instagram2"></i></a></li>
                     <li class="google-plus"><a href="#"><i class="icon-google-plus"></i></a></li>
-                  </ul>
+                  </ul>-->
                 </div>
               </div>
             </div>
