--- a/courses.html
+++ b/courses.html
@@ -114,10 +114,10 @@
                 <a href="#" data-toggle="dropdown" class="dropdown-toggle" >Calendar</a>
                 <ul class="dropdown-menu">
                   <li><a href="http://iaau.edu.kg/view/public/pages/page.xhtml;jsessionid=TCIdhbOa1D1eOGAldtBq-N1i_kOX5KHgKE593l4n.sites?id=281">Academic Calendar</a></li>
-                  <li><a href="calendar/schedule-of-lectures.html">Schedule of Lectures</a></li>
-                  <li><a href="calendar/midterms.html">Midterms Schedule</a></li>
+                  <li><a href="calendar/schedule-of-letures.html">Schedule of Lectures</a></li>
+                  <li><a href="midterms.html">Midterms Schedule</a></li>
                   <li><a href="calendar/finals.html">Finals Schedule</a></li>
-                  <li><a href="calendar/labs.html">Labs Schedule</a></li>
+                  <li><a href="labs.html">Labs Schedule</a></li>
                   
                </ul>
               </li>
@@ -219,7 +219,7 @@
               </div>
 
               <div class="probootstrap-service-2 probootstrap-animate">
-                <div class="image" style="background-image: url(images/courses/physics.jpg); background-size: contain;">
+                <div class="image" style="background-image: url(images/courses/physics.jpg); background-size: contain; background-repeat: no-repeat;">
                   <div class="image-bg">
                     
                   </div>
