--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                 <a href="#" data-toggle="dropdown" class="dropdown-toggle">Bachelor Program</a>
                 <ul class="dropdown-menu">
                   <li><a href="courses.html">Courses</a></li>
-                  <li><a href="courses.html">Research</a></li>
+                  <li><a href="error.html">Research</a></li>
                   <li><a href="course-single.html">Degree Guide</a></li>
                   <li><a href="gallery.html">Recent Diplomas</a></li>
                   <li><a href="gallery.html">Exam Rules</a></li>
