--- a/contact/contact.html
+++ b/contact/contact.html
@@ -50,10 +50,10 @@
                 <a href="#" data-toggle="dropdown" class="dropdown-toggle">Department</a>
                 <ul class="dropdown-menu">
                   <li><a href="../News/news.html">News</a></li>
-                  <li><a href="../courses.html">Developments</a></li>
-                  <li><a href="course-single.html">Exchange Programs</a></li>
-                  <li><a href="gallery.html">Prospective Students</a></li>
-                  <li><a href="gallery.html">Alumni</a></li>
+                  <li><a href="../error.html">Developments</a></li>
+                  <li><a href="http://ic.iaau.edu.kg/">Exchange Programs</a></li>
+                  <li><a href="../error.html">Prospective Students</a></li>
+                  <li><a href="../error.html">Alumni</a></li>
                   <li><a href="contact.html">Contact Us</a></li>
                   
                   <!-- <li class="dropdown-submenu dropdown">
