--- a/faculty/n.shaidullaev.html
+++ b/faculty/n.shaidullaev.html
@@ -137,7 +137,7 @@
                   
                   <!--<p><a href="#" class="btn btn-primary">Learn More</a></p>-->
                 </div>
-                <div class="probootstrap-image probootstrap-animate" style="background-image: url(../images/faculty/n.shaidullaev.jpg);background-position: center; height: 745px">
+                <div class="probootstrap-image probootstrap-animate" style="background-image: url(../images/faculty/n.shaidullaev.jpg);background-size: cover; height: 745px">
                   
                 </div>
               </div>
