new pages added

--- a/courses.html
+++ b/courses.html
@@ -71,7 +71,7 @@
                 <ul class="dropdown-menu">
                   <li><a href="courses.html">Courses</a></li>
                   <li><a href="error.html">Research</a></li>
-                  <li><a href="error.html">Degree Guide</a></li>
+                  <li><a href="degreeguide.html">Degree Guide</a></li>
                   <li><a href="error.html">Recent Diplomas</a></li>
                   <li><a href="error.html">Exam Rules</a></li>
                   <li><a href="error.html">Admission</a></li>
