links updated and fixed

--- a/calendar/labs.html
+++ b/calendar/labs.html
@@ -106,13 +106,8 @@
       </nav>
 
 	<!-- CONTENT -->
-	<div class="main">
-		<section class="probootstrap-section">
-			<div id="wrap-content">
+	<div class="main" style="height: 550px;">
 		
-			</div>
-			
-		</section>
 		
 	</div>
 	<!-- END OF CONTENT -->
