--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
               <li class="dropdown">
                 <a href="labs/labs.html" data-toggle="dropdown" class="dropdown-toggle">Labs</a>
                 <ul class="dropdown-menu">
-                   <li><a href="labs/labs.html">Our Labs</a></li>
+                   <li><a href="lab.html">Our Labs</a></li>
                   <li><a href="labs/policy.html">Policy & Regulations</a></li>
                   <li><a href="labs/software.html">Software</a></li>
                   
