--- a/masterdegree/overview.html
+++ b/masterdegree/overview.html
@@ -45,7 +45,7 @@
                 <li class="dropdown">
                 <a href="#" data-toggle="dropdown" class="dropdown-toggle">Department</a>
                 <ul class="dropdown-menu">
-                  <li><a href="news.html">News</a></li>
+                  <li><a href="../News/news.html">News</a></li>
                   <li><a href="../error.html">Developments</a></li>
                   <li><a href="http://ic.iaau.edu.kg/">Exchange Programs</a></li>
                   <li><a href="../error.html">Prospective Students</a></li>
