labs page changed

--- a/lab.html
+++ b/lab.html
@@ -159,7 +159,7 @@
 
           <div class="labs-content">
 
-          <a href="#"><img src="labs/img/labs-img/lab32.jpg" class="image-left"/></a>
+          <a href="#"><img src="labs/img/labs-img/lab32.jpg" class="image-left" style="background-color:red;"></a>
           <p>
         
             <h5><strong>The Electronic (Lab-1) </strong></h5>
