changed lab sections

--- a/index.html
+++ b/index.html
@@ -155,8 +155,8 @@
                 <a href="labs/labs.html" data-toggle="dropdown" class="dropdown-toggle">Labs</a>
                 <ul class="dropdown-menu">
                    <li><a href="lab.html">Our Labs</a></li>
-                  <li><a href="labs/policy.html">Policy & Regulations</a></li>
-                  <li><a href="labs/software.html">Software</a></li>
+                  <li><a href="policy.html">Policy & Regulations</a></li>
+                  <li><a href="software.html">Software</a></li>
                   
                   
                   <!-- <li class="dropdown-submenu dropdown">
