--- a/labs.html
+++ b/labs.html
@@ -12,7 +12,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/gif/png" href="images/favicon.png">
-    <title>Info | CS AIU</title>
+    <title>Labs | CS AIU</title>
     
     
     <link href="https://fonts.googleapis.com/css?family=Raleway:300,400,500,700|Open+Sans" rel="stylesheet">
